--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ services:
 before_install:
   - curl -fsSL https://deno.land/x/install/install.sh | sh
   - export PATH="/home/travis/.deno/bin:$PATH"
-  
+
 script:
-  - deno ./test.ts --allow-all
+  - deno -A -c tsconfig.json ./test.ts
