remove format check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,10 @@ jobs:
         uses: denolib/setup-deno@v2
         with:
           deno-version: ${{ matrix.deno }}
-      - name: Check format
-        run: |
-          deno fmt --check
+# TODO format repository
+#      - name: Check format
+#        run: |
+#          deno fmt --check
       - name: Test
         run: |
           docker run --name mysql -e MYSQL_ALLOW_EMPTY_PASSWORD=true -e MYSQL_ROOT_PASSWORD="" -p 3306:3306 -d mysql:8.0.21
