--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,25 @@ jobs:
       matrix:
         deno: ["v1.2.1"]
     name: Deno ${{ matrix.deno }}
+
+    services:
+      mysql:
+        image: mysql:8.0.21
+        ports:
+          - 3306
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_ROOT_PASSWORD: ""
+
     steps:
       - uses: actions/checkout@v2
       - name: Setup Deno
         uses: denolib/setup-deno@v2
         with:
           deno-version: ${{ matrix.deno }}
-# TODO format repository
-#      - name: Check format
-#        run: |
-#          deno fmt --check
+      - name: Check format
+        run: |
+          deno fmt --check
       - name: Test
         run: |
-          docker run --name mysql -e MYSQL_ALLOW_EMPTY_PASSWORD=true -e MYSQL_ROOT_PASSWORD="" -p 3306:3306 -d mysql:8.0.21
-          sleep 10s
           deno test -c tsconfig.json --allow-net
