--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,11 @@ jobs:
         POSTGRES_USER: "thankgodukachukwu"
         POSTGRES_PASSWORD: "test_orm" 
         POSTGRES_DB: "test_orm"
-      options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+      options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
       
 
     steps:
