--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,5 @@ services:
     POSTGRES_PASSWORD: "test_orm" 
     POSTGRES_DB: "test_orm"
   sqlite:
-    image: sqlite3
+    image: keinos/sqlite3:latest
     
