feat:databaseDriverAdaptations - Postgres|Sqlite

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 services:
   - mysql
+  - postgresql
+  - SQLITE3
+  
+  
 
 before_install:
   - curl -fsSL https://deno.land/x/install/install.sh | sh
   - export PATH="/home/travis/.deno/bin:$PATH"
 
 script:
-  - deno test --unstable --allow-net -c tsconfig.json test.ts
+  - deno test --allow-net  --allow-read --allow-write -c tsconfig.json test.ts 
