--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,8 @@ before_install:
   - curl -fsSL https://deno.land/x/install/install.sh | sh
   - export PATH="/home/travis/.deno/bin:$PATH"
 
+before_script:
+  - psql -c 'create database test_orm;' -U postgres
+
 script:
   - deno test --allow-net  --allow-read --allow-write -c tsconfig.json test.ts 
