--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
    ports:
     - 5432:5432
    environment:
-    POSTGRES_USER: "thankgodukachukwu"
-    POSTGRES_PASSWORD: "test_orm" 
+    POSTGRES_USER: "postgres"
+    POSTGRES_PASSWORD: "" 
     POSTGRES_DB: "test_orm"
   sqlite:
     image: keinos/sqlite3:latest
