add isolatedModules:false to tsconfig & readme for Deno 1.6.1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "allowJs": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "module": "esnext"
+    "module": "esnext",
+    "isolatedModules": false
   }
 }
