feat:databaseDriverAdaptations - MySQL feat:databaseDriverAdaptations - MySQL
feat:databaseDriverAdaptations - MySQL

feat:databaseDriverAdaptations - MySQL

feat:databaseDriverAdaptations - MySQL

feat:databaseDriverAdaptations - MySQL

feat:databaseDriverAdaptations - MySQL

feat:databaseDriverAdaptations - MySQL

feat:databaseDriverAdaptations - MySQL

feat:databaseDriverAdaptations - MySQL

feat:databaseDriverAdaptations - MySQL

feat:databaseDriverAdaptations - MySQL

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,6 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
           MYSQL_ROOT_PASSWORD: ""
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3 
-
-      postgres:
-       image: postgres:11.5
-       ports:
-        - 5432:5432
-       env:
-        POSTGRES_USER: "postgres"
-        POSTGRES_PASSWORD: "" 
-        POSTGRES_DB: "test_orm"
-      sqlite:
-        image: keinos/sqlite3:latest
       
 
     steps:
@@ -43,4 +32,4 @@ jobs:
           deno fmt --check
       - name: Test
         run: |
-          deno test --allow-net  --allow-read --allow-write -c tsconfig.json
+          deno test --allow-net -c tsconfig.json
